--- a/bcsoft/styles/globals.scss
+++ b/bcsoft/styles/globals.scss
@@ -34,3 +34,5 @@
 @import './scss/services-item';
 @import './scss/clients-feedbacks';
 @import './scss/re-engineering';
+@import './scss/courses-structure';
+@import './scss/course-structure-card';
