feat(design): created page designAndCommunication

--- a/bcsoft/styles/globals.scss
+++ b/bcsoft/styles/globals.scss
@@ -36,3 +36,5 @@
 @import './scss/re-engineering';
 @import './scss/courses-structure';
 @import './scss/course-structure-card';
+@import './scss/design';
+@import './scss/products';
