--- a/bcsoft/styles/_design_bcsoft.scss
+++ b/bcsoft/styles/_design_bcsoft.scss
@@ -18,6 +18,7 @@ $--unnamed-color-2974b3: #2974B3;
 $--unnamed-color-ff8400: #FF8400;
 $--unnamed-color-39597787: #39597787;
 $--unnamed-color-f3f3f3: #F3F3F3;
+$--unnamed-color-36577f: #36577F;
 
 /* Font/text values */
 $--unnamed-font-family-exo-2: "Exo-regular";
