feat(services): created services page

--- a/bcsoft/styles/globals.scss
+++ b/bcsoft/styles/globals.scss
@@ -40,3 +40,9 @@
 @import './scss/card-courses-masters';
 @import './scss/design';
 @import './scss/products';
+@import './scss/services-products';
+@import './scss/card-services-products';
+@import './scss/our-services';
+@import './scss/avaiable-services';
+@import './scss/header-avaiable-services';
+@import './scss/card-avaiable-services';
