feat(la-bella-estate): created page la-bella-estate

--- a/bcsoft/styles/globals.scss
+++ b/bcsoft/styles/globals.scss
@@ -46,3 +46,8 @@
 @import './scss/avaiable-services';
 @import './scss/header-avaiable-services';
 @import './scss/card-avaiable-services';
+@import './scss/la-bella-estate';
+@import './scss/cervellone';
+@import './scss/cervellone-item';
+@import './scss/estate-development-team';
+@import './scss/card-developer';
