feat(news) created news page

--- a/bcsoft/styles/globals.scss
+++ b/bcsoft/styles/globals.scss
@@ -51,3 +51,7 @@
 @import './scss/cervellone-item';
 @import './scss/estate-development-team';
 @import './scss/card-developer';
+@import './scss/latest-news';
+@import './scss/card-news-letter';
+@import './scss/linkedin-feed';
+@import './scss/youtube-videos';
