feat(form) created form component

--- a/bcsoft/styles/_design_bcsoft.scss
+++ b/bcsoft/styles/_design_bcsoft.scss
@@ -20,6 +20,7 @@ $--unnamed-color-39597787: #39597787;
 $--unnamed-color-f3f3f3: #F3F3F3;
 $--unnamed-color-36577f: #36577F;
 $--unnamed-color-2c74b4: #2C74B4;
+$--unnamed-color-395977: #395977;
 
 /* Font/text values */
 $--unnamed-font-family-exo-2: "Exo-regular";
