feat(implemeting-forms): implemented forms in every page, improved strengths webpart, tested accessibility on every page

--- a/bcsoft/styles/scss/_banner.scss
+++ b/bcsoft/styles/scss/_banner.scss
@@ -7,7 +7,7 @@
     min-height: 50px;
     text-align: center;
     &-text {
-        color: $--unnamed-color-185fa2;
+        color: $--unnamed-color-165a99;
         font-family: $--unnamed-font-family-exo-2;
         font-size: $--unnamed-font-size-16;
         font-weight: $--unnamed-font-weight-400;
