--- a/bcsoft/styles/scss/_job-offers.scss
+++ b/bcsoft/styles/scss/_job-offers.scss
@@ -16,7 +16,7 @@
         width: 100%;
 
         h1 {
-            color: $--unnamed-color-39597787;
+            color: $--unnamed-color-2e6ea2;
             font-size: $--unnamed-font-size-78;
             font-weight: $--unnamed-font-weight-300;
         }
