--- a/bcsoft/styles/scss/_numbers.scss
+++ b/bcsoft/styles/scss/_numbers.scss
@@ -127,7 +127,7 @@
             z-index: 5;
             width: 100px;
             height: 100px;
-            background-color: $--unnamed-color-aacef8;
+            background-color: $--unnamed-color-155897;
             top: 260px;
             left: 45px;
             transform: perspective(800px) rotate3d(0, 1, 0, -20deg);
@@ -137,7 +137,7 @@
             z-index: 4;
             width: 100px;
             height: 100px;
-            background-color: $--unnamed-color-2974b3;
+            background-color: $--unnamed-color-accfe5;
             top: 267px;
             left: 52px;
             transform: perspective(800px) rotate3d(0, 1, 0, -20deg);
