--- a/bcsoft/styles/scss/_vision.scss
+++ b/bcsoft/styles/scss/_vision.scss
@@ -117,7 +117,7 @@
             text-align: end;
 
             h1 {
-                color: $--unnamed-color-ff8400;
+                color: $--unnamed-color-e57600;
             }
 
             p {
