--- a/bcsoft/styles/_design_bcsoft.scss
+++ b/bcsoft/styles/_design_bcsoft.scss
@@ -21,6 +21,10 @@ $--unnamed-color-f3f3f3: #F3F3F3;
 $--unnamed-color-36577f: #36577F;
 $--unnamed-color-2c74b4: #2C74B4;
 $--unnamed-color-395977: #395977;
+$--unnamed-color-165a99: #165a99;
+$--unnamed-color-617791: #617791;
+$--unnamed-color-e57600: #e57600;
+$--unnamed-color-2e6ea2: #2e6ea2;
 
 /* Font/text values */
 $--unnamed-font-family-exo-2: "Exo-regular";
@@ -36,6 +40,8 @@ $--unnamed-font-size-14: 14px;
 $--unnamed-font-size-16: 16px;
 $--unnamed-font-size-18: 18px;
 $--unnamed-font-size-22: 22px;
+$--unnamed-font-size-26: 26px;
+$--unnamed-font-size-27: 27px;
 $--unnamed-font-size-28: 28px;
 $--unnamed-font-size-30: 30px;
 $--unnamed-font-size-36: 36px;
