--- a/bcsoft/styles/scss/_clients.scss
+++ b/bcsoft/styles/scss/_clients.scss
@@ -1,3 +1,11 @@
+$animationsArray: (
+    1: fadeIn 3s ease-in-out forwards,
+    2: fadeIn 3s ease-in-out .5s forwards,
+    3: fadeIn 3s ease-in-out 1.5s forwards,
+    4: fadeIn 3s ease-in-out 2s forwards,
+    5: fadeIn 3s ease-in-out 2.5s forwards,
+);
+
 .clients {
     display: flex;
     flex-flow: column nowrap;
@@ -17,24 +25,16 @@
             align-items: center;
             min-height: 100px;
             max-width: 200px;
-
-            @keyframes fadeIn {
-                0% {opacity:0;}
-                100% {opacity:1;}
-            }
-              
-            @-moz-keyframes fadeIn {
-                0% {opacity:0;}
-                100% {opacity:1;}
-            }
-              
-            @-webkit-keyframes fadeIn {
-                0% {opacity:0;}
-                100% {opacity:1;}
-            }
-
+            opacity: 0;
         }
 
+        @each $key, $animation in $animationsArray {
+            &-content:nth-child(#{$key}) {
+                animation: $animation;
+                -WebkitAnimation: $animation;
+                -MozAnimation: $animation;
+            }
+        }
     }
 
     &-description {
@@ -54,4 +54,19 @@
         }
     }
 
+}
+
+@keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+}
+  
+@-moz-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+}
+  
+@-webkit-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
 }
