feat(develop): refactoring customHero

--- a/bcsoft/styles/_design_bcsoft.scss
+++ b/bcsoft/styles/_design_bcsoft.scss
@@ -28,6 +28,8 @@ $--unnamed-color-2e6ea2: #2e6ea2;
 
 /* Font/text values */
 $--unnamed-font-family-exo-2: "Exo-regular";
+$--unnamed-font-family-exo-2-light: "Exo-light";
+$--unnamed-font-family-exo-2-bold: "Exo-bold";
 $--unnamed-font-style-normal: normal;
 $--unnamed-font-style-italic: italic;
 $--unnamed-font-weight-300: 300;
