--- a/bcsoft/styles/scss/_quote.scss
+++ b/bcsoft/styles/scss/_quote.scss
@@ -6,6 +6,10 @@
     justify-content: center;
     min-height: 600px;
 
+    &-image {
+        position: relative;
+    }
+
     h1 {
         color: $--unnamed-color-185fa2;
         font-family: $--unnamed-font-family-exo-2;
