--- a/bcsoft/styles/scss/_nav.scss
+++ b/bcsoft/styles/scss/_nav.scss
@@ -13,17 +13,17 @@
     color: $--unnamed-color-185fa2;
     text-align: center;
     letter-spacing: 0px;
-    color: #185FA2;
+    color: #185fa2;
   }
 }
 
-.navbar-custom-button.active { 
+.navbar-custom-button.active {
   color: #fff;
   outline: none;
   background: $--unnamed-color-185fa2 0% 0% no-repeat padding-box;
   border: 1px solid $--unnamed-color-185fa2;
-  box-shadow: 0px 2px 10px #001F3C33;
-  border: 1px solid #185FA2;
+  box-shadow: 0px 2px 10px #001f3c33;
+  border: 1px solid #185fa2;
 }
 
 .arrow-1 {
@@ -50,7 +50,7 @@
   transition: all 0.3s linear 0.1s;
   height: 0;
   opacity: 0;
-  &.open{
+  &.open {
     height: auto;
     height: 70px;
     opacity: 1;
@@ -64,9 +64,8 @@
       letter-spacing: $--unnamed-character-spacing-0;
       color: $--unnamed-color-ffffff;
       @extend .pointer;
-      & > span {
-        @include margin-left-right(null, 0, 6);
-      }
+      text-decoration: none;
+      @include margin-left-right(null, 0, 12);
     }
   }
 }
