feat(develop): created webparts for beatrix and openimpact pages

--- a/bcsoft/styles/scss/_app-description.scss
+++ b/bcsoft/styles/scss/_app-description.scss
@@ -17,11 +17,6 @@
         position: relative;
         height: 700px;
         max-width: 600px;
-
-        p {
-            line-height: 1.4;
-        }
-
+        min-width: 300px;
     }
-
 }
