--- a/bcsoft/styles/globals.scss
+++ b/bcsoft/styles/globals.scss
@@ -58,3 +58,5 @@
 @import './scss/form';
 @import './scss/idea';
 @import './scss/app-description';
+@import './scss/results';
+@import './scss/info';
