feat(develop): implemented agere's and mida's webparts, fixed some minor bugs

--- a/bcsoft/styles/scss/_app-description.scss
+++ b/bcsoft/styles/scss/_app-description.scss
@@ -1,15 +1,14 @@
 .app {
-    min-height: 1000px;
+    align-items: center;
     display: flex;
     flex-flow: row wrap;
+    gap: 2rem;
     justify-content: center;
-    align-items: center;
+    min-height: 1000px;
 
     header {
         display: flex;
         flex-flow: column nowrap;
-        justify-content: flex-start;
-        align-items: flex-start;
     }
 
     &-item {
