--- a/bcsoft/styles/scss/_services.scss
+++ b/bcsoft/styles/scss/_services.scss
@@ -1,30 +1,30 @@
 .services {
+    @include padding-left-right(null, 60, 60);
+    @include padding-top-bottom(null, 60, 60);
+    // gap: 3rem;
     align-items: center;
     background-color: $--unnamed-color-001f3c;
     clip-path: polygon(0 7%, 100% 0, 100% 93%, 0% 100%);
     display: flex;
     flex-flow: column nowrap;
-    // gap: 3rem;
     justify-content: center;
     min-height: 600px;
-    @include padding-top-bottom(null, 60, 60);
-    @include padding-left-right(null, 60, 60);
 
     header {
 
-        align-items: center;
+        @include margin-top-bottom(null, 50, 0);
+        // align-items: center;
         display: flex;
         flex-flow: column nowrap;
         font-family: $--unnamed-font-family-exo-2;
         gap: 2rem;
-        max-width: 900px;
-        text-align: center;
-        @include margin-top-bottom(null, 50, 0);
+        // max-width: 900px;
+        // text-align: center;
 
         h1 {
+            @include margin-top-bottom(null, 0, 0);
             font-size: $--unnamed-font-size-30;
             font-weight: $--unnamed-font-weight-500;
-            @include margin-top-bottom(null, 0, 0);
         }
 
         p {
@@ -40,25 +40,25 @@
     }
 
     &-content {
+        @include padding-left-right(null, 60, 60);
+        @include padding-top-bottom(null, 60, 60);
         align-items: center;
         display: flex;
         flex-flow: row wrap;
-        @include padding-top-bottom(null, 60, 60);
-        @include padding-left-right(null, 60, 60);
         gap: 3rem;
-        max-width: 1400px;
+        // max-width: 1400px;
 
         article {
             @include padding-left-right(null, 30, 30);
             @include padding-top-bottom(null, 15, 15);
             align-items: center;
+            border: 1.5px solid $--unnamed-color-ffffff;
             display: flex;
             flex-flow: column nowrap;
             justify-content: center;
             position: relative;
             transform: skewY(357deg);
             width: 247px;
-            border: 1.5px solid $--unnamed-color-ffffff;
 
             & > * {
                 transform: skewY(-357deg);
@@ -72,9 +72,9 @@
             }
 
             h1 {
+                @include margin-top-bottom(null, 0, 0);
                 font-size: $--unnamed-font-size-22;
                 font-weight: $--unnamed-font-weight-500;
-                @include margin-top-bottom(null, 0, 0);
             }
 
             p {
@@ -82,10 +82,10 @@
                 color: $--unnamed-color-185fa2;
                 font-size: $--unnamed-font-size-16;
                 font-weight: $--unnamed-font-weight-300;
-                text-align: center;
-                transition: height .8s ease-in-out;
                 height: 0;
                 overflow: hidden;
+                text-align: center;
+                transition: height .8s ease-in-out;
             }
 
             span {
