--- a/bcsoft/styles/scss/_news.scss
+++ b/bcsoft/styles/scss/_news.scss
@@ -109,29 +109,112 @@
         height: 100px;
     }
 
-    .custom-swiper-button {
-        background-color: #0F4B8C;
-        color: #fff !important;
-        clip-path: polygon(0 10%, 100% 0%, 100% 90%, 0% 100%);
-        width: 35px !important;
-        height: 45px !important;
-
-        .custom-next-arrow,
-        .custom-prev-arrow {
-          border-right: 2px solid;
-          border-bottom: 2px solid;
-          height: 20px;
-          width: 20px;
+    .news-prev-button-container {
+        transform: skewY(350deg) translateX(100%);
+        top: 50%;
+        left: 50px;
+        position: absolute;
+    
+    
+        .news-prev-button-content {
+            background-color: #0F4B8C;
+            color: #fff !important;
+            width: 50px !important;
+            height: 60px !important;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+    
+            &:hover {
+                &::before {
+                    content: '';
+                    top: 0;
+                    left: 0;
+                    position: absolute;
+                    width: 50px;
+                    height: 60px;
+                    border: 2px solid #185FA2;
+                    z-index: -1;
+                    transform: translate(1px, -5px);
+                }
+        
+                &::after {
+                    content: '';
+                    top: 0;
+                    left: 0;
+                    position: absolute;
+                    width: 50px;
+                    height: 60px;
+                    border: 2px solid #C9E2FF;
+                    z-index: -1;
+                    transform: translate(-5px, 1px);
+                }
+            }
+    
+      
+            .custom-prev-arrow {
+                border-right: 2px solid;
+                border-bottom: 2px solid;
+                height: 20px;
+                width: 20px;
+                transform: skewY(-350deg) rotate(135deg);
+                margin-left: 10px;
+            }
         }
+    
+    }
 
-        .custom-next-arrow {
-            transform: rotate(-45deg);
-            margin-right: 10px;
-        }
-  
-        .custom-prev-arrow {
-            transform: rotate(135deg);
-            margin-left: 10px;
+
+    .news-next-button-container {
+        transform: skewY(350deg) translateX(-100%);
+        top: 50%;
+        right: 50px;
+        position: absolute;
+    
+    
+        .news-next-button-content {
+            background-color: #0F4B8C;
+            color: #fff !important;
+            width: 50px !important;
+            height: 60px !important;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+    
+            &:hover {
+                &::before {
+                    content: '';
+                    top: 0;
+                    left: 0;
+                    position: absolute;
+                    width: 50px;
+                    height: 60px;
+                    border: 2px solid #185FA2;
+                    z-index: -1;
+                    transform: translate(-5px, -5px);
+                }
+    
+                &::after {
+                    content: '';
+                    top: 0;
+                    left: 0;
+                    position: absolute;
+                    width: 50px;
+                    height: 60px;
+                    border: 2px solid #C9E2FF;
+                    z-index: -1;
+                    transform: translate(1px, 1px);
+                }
+            }
+            
+            .custom-next-arrow{
+              border-right: 2px solid;
+              border-bottom: 2px solid;
+              height: 20px;
+              width: 20px;
+              transform: skewY(-350deg) rotate(-45deg);
+              margin-right: 10px;
+            }
         }
     }
     
