feat(develop) adjusted some layout problems

--- a/bcsoft/styles/_design_bcsoft.scss
+++ b/bcsoft/styles/_design_bcsoft.scss
@@ -25,6 +25,8 @@ $--unnamed-color-165a99: #165a99;
 $--unnamed-color-617791: #617791;
 $--unnamed-color-e57600: #e57600;
 $--unnamed-color-2e6ea2: #2e6ea2;
+$--unnamed-color-5093ce: #5093CE;
+$--unnamed-color-395977d9: #395977d9;
 
 /* Font/text values */
 $--unnamed-font-family-exo-2: "Exo-regular";
