--- a/bcsoft/styles/scss/_custom-hero.scss
+++ b/bcsoft/styles/scss/_custom-hero.scss
@@ -6,7 +6,7 @@
     clip-path: polygon(0 0, 100% 0, 100% 95%, 0% 100%);
     display: flex;
     flex-flow: column nowrap;
-    gap: 3rem;
+    gap: 2rem;
     justify-content: center;
     min-height: 750px;
     position: relative;
@@ -51,8 +51,6 @@
 
         .custom-hero-image {
             position: relative;
-            // height: 350px;
-            // width: 350px;
             height: 500px;
             width: 500px;
         }
@@ -65,6 +63,38 @@
 
         span {
             border-bottom: 2px solid #000;
+        }
+    }
+
+    .custom-hero-button-text-fade-in {
+        opacity: 0;
+        color: $--unnamed-color-001f3c;
+        font-size: $--unnamed-font-size-14;
+        font-weight: 300;
+    }
+    
+    .custom-hero-button {
+        background: transparent;
+        width: 70px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transform: skewY(7deg);
+        height: 60px;
+        border: 2px solid black;
+    
+        & > svg {
+            transition: transform .5s ease-in-out;
+        }
+    
+        &:hover {
+            svg {
+                transform: rotateZ(90deg);
+            }
+    
+            + .custom-hero-button-text-fade-in {
+                opacity: 1;
+            }
         }
     }
 }
